// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code && selectedType === code 1`] = `
<div
  className="card_link layout-column flex-none selected"
  onClick=""
>
  <div
    className="inactive flex-none layout-row layout-align-center-end"
  >
    <h3
      className="flex-none"
    >
      Coming Soon
    </h3>
  </div>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <i
        className="flex-none fa fa-check"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="card_link layout-column flex-none unselected"
  onClick={[Function]}
>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    />
  </div>
</div>
`;

exports[`state.redirect is true 1`] = `
<Redirect
  push={true}
  to="FOO_PATH"
/>
`;

exports[`theme is falsy 1`] = `
<div
  className="card_link layout-column flex-none unselected"
  onClick={[Function]}
>
  <div
    className="card_img flex-85"
    style={
      Object {
        "backgroundImage": "url(FOO_IMAGE)",
        "backgroundSize": "contain",
      }
    }
  />
  <div
    className="card_action flex-15 layout-row layout-align-space-between-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
    >
      <p
        className="flex-none"
      >
        FOO_TEXT
         
      </p>
    </div>
    <div
      className="flex-none layout-row layout-align-center-center"
    />
  </div>
</div>
`;
